# pylib_template

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: docs.yml  quality.yml  release.yml
{{cookiecutter.repo_name}}/features/: cli.feature  dog.feature
{{cookiecutter.repo_name}}/features/steps/: cli.py  dog.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  cli.py  dog.py
{{cookiecutter.repo_name}}/tests/: test_cli.py  test_dog.py
