#https://packaging.python.org/en/latest/tutorials/packaging-projects/ ----*----*----*----*----*----*----*----*----*----*
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html ----*----*----*----*----*----*----*----*----*----*
[project]
name = "{{cookiecutter.repo_name}}"
dynamic = ["version"]
description = "test project to read yaml files validate/update and overwrite them"
readme = { file = "README.txt", content-type = "text/markdown" }
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
maintainers = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
keywords = [
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
{%- if cookiecutter.license != "no" %}
    "License :: OSI Approved :: {{cookiecutter.license}}",
{%- endif %}
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

#Library dependencies --*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
dependencies = [
]

[project.optional-dependencies]
cli = [
    "click",
    "rich",
]
docs = [
    "pdoc",
]
lint = [
    "bump-my-version",
    "mypy",
    "ruff",
]
test = [
{%- if cookiecutter.testing == "TDD" %}
    "pytest",
    "pytest-cov",
{%- elif cookiecutter.testing == "BDD" %}
    "behave[toml]",
{%- endif %}
    "tox",
]
dev = [
    "{{cookiecutter.repo_name}}[cli]",
    "{{cookiecutter.repo_name}}[docs]",
    "{{cookiecutter.repo_name}}[lint]",
    "{{cookiecutter.repo_name}}[test]",
]

#Entry Points *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.scripts]
{{cookiecutter.repo_name}}_cli = "{{cookiecutter.repo_name}}.cli:cli"

#URLs ---*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.urls]
Homepage = "https://github.com/{{cookiecutter.repo_path}}/{{cookiecutter.repo_name}}.git"
Documentation = "https://github.com/{{cookiecutter.repo_path}}/{{cookiecutter.repo_name}}/main/README.md"
Repository = "https://github.com/{{cookiecutter.repo_path}}/{{cookiecutter.repo_name}}.git"
Issues = "https://github.com/{{cookiecutter.repo_path}}/{{cookiecutter.repo_name}}/issues"
Changelog = "https://github.com/{{cookiecutter.repo_path}}/{{cookiecutter.repo_name}}/blob/main/CHANGELOG.md"

#https://setuptools.pypa.io/en/latest/userguide/datafiles.html -*----*----*----*----*----*----*----*----*----*----*----*
[tool.setuptools.package-data]
{{cookiecutter.repo_name}} = ["*.yml"]

#Documentation ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#https://pdoc.dev/docs/pdoc.html#how-can-i
#https://github.com/mitmproxy/pdoc/tree/main/examples
#$ pdoc -o docs/ src/{{cookiecutter.repo_name}}

#https://callowayproject.github.io/bump-my-version/reference/configuration/ ---*----*----*----*----*----*----*----*----*
[tool.bumpversion]
current_version = "{{cookiecutter.version}}"
parse = "(?x)(?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)(?:-(?P<pre_l>[a-zA-Z-]+)(?P<pre_n>0|[1-9]\\d*))?"
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{distance_to_latest_tag}",
    "{major}.{minor}.{patch}",
]
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "src/{{cookiecutter.repo_name}}/__init__.py"
search = "{current_version}"
replace = "{new_version}"

#https://docs.astral.sh/ruff/settings/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.ruff]
fix = true
line-length = 120
src = ["src", "tests"]
{%- if cookiecutter.testing == "BDD" %}
extend-exclude = ["features"]
{%- endif %}

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]

#https://mypy.readthedocs.io/en/stable/config_file.html ---*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.mypy]
exclude = ["\\.*venv",]
warn_return_any = true
warn_unreachable = true

{%- if cookiecutter.testing == "TDD" %}
#https://docs.pytest.org/en/stable/reference/customize.html ----*----*----*----*----*----*----*----*----*----*----*----*
[tool.pytest.ini_options]
testpaths = ["tests"]
{%- elif cookiecutter.testing == "BDD" %}
#https://behave.readthedocs.io/en/latest/behave/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.behave]
format = "plain"
{%- endif %}

#https://tox.wiki/en/latest/config.html ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#[tool.tox]
