#https://packaging.python.org/en/latest/tutorials/packaging-projects/ ----*----*----*----*----*----*----*----*----*----*
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html ----*----*----*----*----*----*----*----*----*----*
[project]
name = "{{cookiecutter.repo_name}}"
dynamic = ["version"]
description = "test project to read yaml files validate/update and overwrite them"
readme = { file = "README.txt", content-type = "text/markdown" }
authors = [{ name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }]
maintainers = [{ name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }]
keywords = []
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
{%- if cookiecutter.license != "no" %}
    "License :: OSI Approved :: {{cookiecutter.license}}",
{%- endif %}
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]

#Library dependencies --*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
dependencies = []

[project.optional-dependencies]
cli = ["click", "rich"]
docs = ["pdoc"]
lint = ["mypy", "python-semantic-release", "ruff"]
test = ["pytest", "pytest-cov", "tox"]
dev = [
    "{{cookiecutter.repo_name}}[cli]",
    "{{cookiecutter.repo_name}}[docs]",
    "{{cookiecutter.repo_name}}[lint]",
    "{{cookiecutter.repo_name}}[test]",
]

#Entry Points *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.scripts]
{{cookiecutter.repo_name}}_cli = "{{cookiecutter.repo_name}}.cli:cli"

#URLs ---*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[project.urls]
Homepage = "https://github.com/{{cookiecutter.repo_path}}.git"
Documentation = "https://{{ cookiecutter.username.lower() }}.github.io/{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}.html"
Repository = "https://github.com/{{cookiecutter.repo_path}}.git"
Issues = "https://github.com/{{cookiecutter.repo_path}}/issues"
Changelog = "https://github.com/{{cookiecutter.repo_path}}/blob/main/CHANGELOG.md"

#https://setuptools.pypa.io/en/latest/userguide/datafiles.html -*----*----*----*----*----*----*----*----*----*----*----*
[tool.setuptools.package-data]
{{cookiecutter.repo_name}} = ["*.yml"]

# https://python-semantic-release.readthedocs.io/en/latest/configuration.html -*----*----*----*----*----*----*----*----*
[tool.semantic_release]
commit_message = "Release version: v{version}"
version_variables = ["src/{{cookiecutter.repo_name}}/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "(main|feat/initial_project_release)"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^(?!feat|fix|docs|style|refactor|test).*",
]

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release: <semantic-release>"


#https://docs.astral.sh/ruff/settings/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.ruff]
fix = true
line-length = 120
src = ["src", "tests"]
{%- if cookiecutter.testing == "BDD" %}
extend-exclude = ["features"]
{%- endif %}

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]

#https://mypy.readthedocs.io/en/stable/config_file.html ---*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.mypy]
exclude = ["\\.*venv"]
warn_return_any = true
warn_unreachable = true

{% if cookiecutter.testing == "TDD" -%}
#https://docs.pytest.org/en/stable/reference/customize.html ----*----*----*----*----*----*----*----*----*----*----*----*
[tool.pytest.ini_options]
testpaths = ["tests"]
{%- elif cookiecutter.testing == "BDD" -%}
#https://behave.readthedocs.io/en/latest/behave/ *----*----*----*----*----*----*----*----*----*----*----*----*----*----*
[tool.behave]
format = "plain"
{%- endif %}

#https://tox.wiki/en/latest/config.html ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#[tool.tox]

#Documentation ----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*----*
#https://pdoc.dev/docs/pdoc.html#how-can-i
#https://github.com/mitmproxy/pdoc/tree/main/examples
#$ pdoc -o docs/ src/{{cookiecutter.repo_name}}
